Fix externalname conf and add location parameter for DNSAuthorization.certificatemanager resource
Signed-off-by: Fatih Türken <turkenf@gmail.com>

--- a/examples/certificatemanager/dnsauthorization.yaml
+++ b/examples/certificatemanager/dnsauthorization.yaml
@@ -8,5 +8,6 @@ metadata:
   name: default
 spec:
   forProvider:
+    location: global
     description: The default dnss
     domain: hashicorptest.com
