--- a/package/crds/container.gcp.upbound.io_clusters.yaml
+++ b/package/crds/container.gcp.upbound.io_clusters.yaml
@@ -1207,6 +1207,11 @@ spec:
                             The image type to use for this node. Note that changing the image type
                             will delete and recreate all nodes in the node pool.
                           type: string
+                        index:
+                          default: "0"
+                          description: This is an injected field with a default value
+                            for being able to merge items of the parent object list.
+                          type: string
                         kubeletConfig:
                           description: |-
                             Kubelet configuration, currently supported attributes can be found here.
@@ -1544,6 +1549,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                    x-kubernetes-list-map-keys:
+                    - index
+                    x-kubernetes-list-type: map
                   nodeLocations:
                     description: |-
                       The list of zones in which the cluster's nodes
@@ -3042,6 +3050,11 @@ spec:
                             The image type to use for this node. Note that changing the image type
                             will delete and recreate all nodes in the node pool.
                           type: string
+                        index:
+                          default: "0"
+                          description: This is an injected field with a default value
+                            for being able to merge items of the parent object list.
+                          type: string
                         kubeletConfig:
                           description: |-
                             Kubelet configuration, currently supported attributes can be found here.
@@ -3379,6 +3392,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                    x-kubernetes-list-map-keys:
+                    - index
+                    x-kubernetes-list-type: map
                   nodeLocations:
                     description: |-
                       The list of zones in which the cluster's nodes
@@ -5046,6 +5062,11 @@ spec:
                             The image type to use for this node. Note that changing the image type
                             will delete and recreate all nodes in the node pool.
                           type: string
+                        index:
+                          default: "0"
+                          description: This is an injected field with a default value
+                            for being able to merge items of the parent object list.
+                          type: string
                         kubeletConfig:
                           description: |-
                             Kubelet configuration, currently supported attributes can be found here.
@@ -5307,6 +5328,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                    x-kubernetes-list-map-keys:
+                    - index
+                    x-kubernetes-list-type: map
                   nodeLocations:
                     description: |-
                       The list of zones in which the cluster's nodes
