--- a/examples/containerattached/v1beta1/cluster.yaml
+++ b/examples/containerattached/v1beta1/cluster.yaml
@@ -7,6 +7,7 @@ kind: Cluster
 metadata:
   annotations:
     meta.upbound.io/example-id: containerattached/v1beta1/cluster
+    upjet.upbound.io/manual-intervention: "This resource requires a valid issuerUrl value from the AKS or EKS cluster."
   labels:
     testing.upbound.io/example-name: primary
   name: primary
