Extend SQL User example with connection secret writing
Signed-off-by: Yury Tsarev <yury@upbound.io>

--- a/examples/sql/user.yaml
+++ b/examples/sql/user.yaml
@@ -19,6 +19,9 @@ spec:
     instanceSelector:
       matchLabels:
         testing.upbound.io/example-name: example_instance
+  writeConnectionSecretToRef:
+    name: example-sql-db-user-secret
+    namespace: upbound-system
 
 ---
 
