Fix NodePool.container example manifests
- Import tests for NodePool.container are disabled because its
  Terraform ID is not stable, i.e., it acquires an ID in a
  different syntax after it's successfully imported.
- Set the deletion protection for the Cluster.container dependency
  to false.
- Git ignore kubeconfig files at the repo root.
- Add BucketObject.v1beta2.storage example manifest.
- Add BackupBackupPlan.v1beta2.gke example manifest.
- Disable import tests on BackupBackupPlan.gke.

Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/examples/container/v1beta1/nodepool.yaml
+++ b/examples/container/v1beta1/nodepool.yaml
@@ -6,6 +6,7 @@ apiVersion: container.gcp.upbound.io/v1beta1
 kind: NodePool
 metadata:
   annotations:
+    uptest.upbound.io/disable-import: "true"
     meta.upbound.io/example-id: container/v1beta1/nodepool
   labels:
     testing.upbound.io/example-name: nodepool
@@ -40,6 +41,7 @@ spec:
     initialNodeCount: 1
     location: us-central1-a
     removeDefaultNodePool: true
+    deletionProtection: false
 
 ---
 
