Add 'disable-import: true' annotation for the following resources: - Routine.bigquery.gcp.upbound.io/v1beta1 - Policy.dns.gcp.upbound.io/v1beta1 - Secret.secretmanager.gcp.upbound.io/v1beta1 - User.sql.gcp.upbound.io/v1beta1
Signed-off-by: Fatih Türken <turkenf@gmail.com>

--- a/examples/secretmanager/v1beta1/secret.yaml
+++ b/examples/secretmanager/v1beta1/secret.yaml
@@ -6,6 +6,7 @@ apiVersion: secretmanager.gcp.upbound.io/v1beta1
 kind: Secret
 metadata:
   annotations:
+    uptest.upbound.io/disable-import: "true"
     meta.upbound.io/example-id: secretmanager/v1beta1/secret
   labels:
     testing.upbound.io/example-name: secret
