--- a/examples/sql/v1beta1/user.yaml
+++ b/examples/sql/v1beta1/user.yaml
@@ -6,6 +6,7 @@ apiVersion: sql.gcp.upbound.io/v1beta1
 kind: User
 metadata:
   annotations:
+    uptest.upbound.io/disable-import: "true"
     meta.upbound.io/example-id: sql/v1beta1/user
   labels:
     testing.upbound.io/example-name: example_user
@@ -43,6 +44,7 @@ apiVersion: sql.gcp.upbound.io/v1beta1
 kind: DatabaseInstance
 metadata:
   annotations:
+    uptest.upbound.io/disable-import: "true"
     uptest.upbound.io/pre-delete-hook: testhooks/delete-user.sh
     meta.upbound.io/example-id: sql/v1beta1/user
   labels:
