--- a/examples/bigquery/v1beta1/routine.yaml
+++ b/examples/bigquery/v1beta1/routine.yaml
@@ -6,6 +6,7 @@ apiVersion: bigquery.gcp.upbound.io/v1beta1
 kind: Routine
 metadata:
   annotations:
+    uptest.upbound.io/disable-import: "true"
     meta.upbound.io/example-id: bigquery/v1beta1/routine
   labels:
     testing.upbound.io/example-name: sproc
@@ -26,6 +27,7 @@ apiVersion: bigquery.gcp.upbound.io/v1beta1
 kind: Dataset
 metadata:
   annotations:
+    uptest.upbound.io/disable-import: "true"
     meta.upbound.io/example-id: bigquery/v1beta1/routine
   labels:
     testing.upbound.io/example-name: test
