--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   ci:
-    uses: upbound/uptest/.github/workflows/provider-ci.yml@standard-runners
+    uses: upbound/official-providers-ci/.github/workflows/provider-ci.yml@standard-runners
     with:
       go-version: 1.21
       cleanup-disk: true
